# Thesis_BLE_Mesh

./: .gitignore  README.md
Script_Python/: emilio_function.py  json_analysis.py  json_script.py  prova_seriale.py  read_serial.py  serial_script.py
Thesis/: thesis.txt
Thesis/Thesis/: bibliography.bib  main.tex  mystyle.sty
Thesis/Thesis/frontespizio/: frontespizio.tex
Thesis/Thesis/sections/: 1_introduzione.tex  2_stato_arte.tex  (+8 more)
ble_mesh_client_model/main/: ble_mesh_demo_main.c  board.c  board.h
ble_mesh_node/main/: board.h
file_json/: ble.xlsx  ble_xxx.xlsx  info.txt
file_json/ble_wifi/: ble_wifi.xlsx  ble_wifi_xxx.xlsx
info/: Orari_Rilevazioni_.ods  Test.ods  info.txt
mesh_/level_wifi/level_wifi_client/main/: CMakeLists.txt  Kconfig.projbuild  mesh_board.c  mesh_main.c  my_queue.c
mesh_/level_wifi/level_wifi_client/main/include/: ble_mesh_demo_init.h  mesh_board.h  my_queue.h
power_monitoring/level_client/: CMakeLists.txt
script_python/: calculate_ic_and create_xlsx.py  check_raspberry_file.py  emilio_function.py  json_analysis.py  raspberry_read_serial.py  regex_script.py  rule_serial_script.txt  second_analysis.py  serial_script.py  test_interpolate.py  third_plots.py
script_python/analysis_2/: analysis_4_m.py  clear_data.py  json_create_xlsx.py  json_first_analysis.py  json_preprocessing.py  json_preprocessing_2_mixed.py  json_third_analysis.py  plot_1.py  plot_2.py  read_data.py
script_python/analysis_ble/: analysis_4m_ble.py  clear_data_ble.py  json_calculate_statistics_ble.py  json_create_xlsx_ble.py  json_preprocessing_ble.py
(+677 files in other folders)
